fixed issue with flexbox margin defined using gap and updated readme

--- a/src/components/features/styles.scss
+++ b/src/components/features/styles.scss
@@ -50,14 +50,10 @@
 
 @media screen and (max-width: 750px) {
   .features {
-    display: flex;
-    flex-direction: column;
-    gap: 0;
-    margin: 0;
+    grid-template-columns: 1fr;
 
     &__feature {
       width: 100%;
-      margin-bottom: 4rem;
     }
 
     &__img {
